Adjustments to Plant Details loading sequence

--- a/mobile/src/i18n/locales/pl/plantDetails.json
+++ b/mobile/src/i18n/locales/pl/plantDetails.json
@@ -88,8 +88,8 @@
         "part3b": "obraz kodu QR na telefonie albo",
         "part3c": "go do siebie, a potem wydrukować i przymocować do doniczki. Następnym razem wystarczy zeskanować etykietę zamiast szukać ręcznie."
       },
-      "saveBtn": "Zapisz kod QR",
-      "emailBtn": "Wyślij kod QR e-mailem"
+      "saveBtn": "Zapisz",
+      "emailBtn": "Wyślij"
     },
     "reminders": {
       "title": "Przypomnienia",
