Added translations to Plant Definition modal, fixed data import on selected language

--- a/mobile/src/i18n/locales/en/plantDetailsModals.json
+++ b/mobile/src/i18n/locales/en/plantDetailsModals.json
@@ -5,6 +5,11 @@
     },
     "definition": {
       "title": "Plant definition",
+      "traits": "Traits",
+      "noId": "No plant definition id found.",
+      "loadFailed": "Failed to load plant definition.",
+      "error": "Something went wrong.",
+      "empty": "No definition data available.",
       "body": "This is a placeholder modal. Plant definition details will be implemented later."
     },
     "changeImage": {
