--- a/mobile/src/i18n/locales/pl/createPlantStep05.json
+++ b/mobile/src/i18n/locales/pl/createPlantStep05.json
@@ -102,6 +102,14 @@
           "label": "Uniwersalne podłoże",
           "description": "Dobra opcja startowa dla większości roślin domowych."
         },
+        "green-plants": {
+          "label": "Podłoże do roślin zielonych / domowych",
+          "description": "Uniwersalne podłoże dla roślin zielonych (często także do palm)."
+        },
+        "balcony-flowers": {
+          "label": "Podłoże do kwiatów balkonowych i rabatowych",
+          "description": "Bardziej zasobne; dobre do roślin kwitnących w donicach i skrzynkach."
+        },
         "cactus-succulent": {
           "label": "Podłoże do kaktusów i sukulentów",
           "description": "Bardzo przepuszczalne; idealne dla sukulentów i kaktusów."
@@ -125,6 +133,22 @@
         "herbs-vegetables": {
           "label": "Podłoże do ziół i warzyw",
           "description": "Bardziej zasobne; odpowiednie dla roślin jadalnych."
+        },
+        "citrus": {
+          "label": "Podłoże do cytrusów",
+          "description": "Przepuszczalne; odpowiednie dla cytrusów i roślin śródziemnomorskich."
+        },
+        "fern": {
+          "label": "Podłoże do paproci",
+          "description": "Bardziej wilgociolubne; zwykle z większą ilością części organicznych."
+        },
+        "conifers": {
+          "label": "Podłoże do iglaków",
+          "description": "Podłoże dla iglaków; często lekko kwaśne i przepuszczalne."
+        },
+        "acid-loving": {
+          "label": "Podłoże do roślin kwasolubnych",
+          "description": "Kwaśne podłoże do borówek, wrzosów, rododendronów, azalii itp."
         },
         "peat-free": {
           "label": "Podłoże bez torfu",
