Corrections to modals in Plant Definition view

--- a/mobile/src/i18n/locales/en/plantDetails.json
+++ b/mobile/src/i18n/locales/en/plantDetails.json
@@ -60,6 +60,8 @@
         "changeImage": "Change image",
         "showReminders": "Show reminders"
       },
+      "noDefinitionTitle": "Plant definition unavailable",
+      "noDefinitionBody": "This plant is not linked to a plant definition yet.",
       "editPlant": {
         "title": "Edit plant",
         "msg": "Editing this plant will be implemented later."
