--- a/mobile/src/i18n/locales/pl/plantDetails.json
+++ b/mobile/src/i18n/locales/pl/plantDetails.json
@@ -60,6 +60,8 @@
         "changeImage": "Zmień zdjęcie",
         "showReminders": "Pokaż przypomnienia"
       },
+      "noDefinitionTitle": "Brak definicji rośliny",
+      "noDefinitionBody": "Ta roślina nie jest jeszcze powiązana z definicją rośliny.",
       "editPlant": {
         "title": "Edytuj roślinę",
         "msg": "Edycja tej rośliny zostanie zaimplementowana później."
