--- a/mobile/src/i18n/locales/en/homeModals.json
+++ b/mobile/src/i18n/locales/en/homeModals.json
@@ -7,6 +7,7 @@
     },
     "complete": {
       "title": "Mark task as complete",
+      "overdueInfo": "This task is overdue. The next due date will be calculated from today {{intervalText}}.",
       "noteLabel": "Note (optional)",
       "noteHint": "This note will be saved and can be viewed later per plant in Plants Journal.",
       "notePlaceholder": "You can add a short note about what you did, observations, etc.",
@@ -14,8 +15,9 @@
     },
     "completeBulk": {
       "title": "Mark {{count}} tasks as complete",
+      "overdueInfo": "Some tasks are overdue. For overdue tasks, the next due date will be calculated from today {{intervalText}}.",
       "noteHint": "This note will be saved for each completed task and can be viewed later per plant in Plants Journal.",
-      "confirm": "Mark all as complete"
+      "confirm": "Mark as complete"
     },
     "filter": {
       "title": "Filter tasks",
