Added email translations during register based on selected language

--- a/mobile/src/i18n/locales/en/register.json
+++ b/mobile/src/i18n/locales/en/register.json
@@ -15,6 +15,7 @@
       "passwordsMismatch": "Passwords do not match.",
       "termsRequired": "You must agree to the Terms & Conditions.",
       "incompleteForm": "Please complete the form.",
+      "emailTaken": "This email is already taken.",
       "registrationFailed": "Registration failed. Please try again.",
       "generic": "Something went wrong. Please try again."
     },
