--- a/mobile/src/i18n/locales/pl/register.json
+++ b/mobile/src/i18n/locales/pl/register.json
@@ -15,6 +15,7 @@
       "passwordsMismatch": "Hasła nie są identyczne.",
       "termsRequired": "Musisz zaakceptować regulamin.",
       "incompleteForm": "Proszę uzupełnić formularz.",
+      "emailTaken": "Ten adres e-mail jest już zajęty.",
       "registrationFailed": "Rejestracja nie powiodła się. Spróbuj ponownie.",
       "generic": "Coś poszło nie tak. Spróbuj ponownie."
     },
