--- a/mobile/src/i18n/locales/en/profile.json
+++ b/mobile/src/i18n/locales/en/profile.json
@@ -78,35 +78,6 @@
       "releaseDateLabel": "Release date",
       "contactLabel": "Contact"
     },
-    "prompts": {
-      "changeEmail": {
-        "title": "Change email",
-        "newEmailPlaceholder": "New email",
-        "currentPasswordPlaceholder": "Current password"
-      },
-      "changePassword": {
-        "title": "Change password",
-        "currentPasswordPlaceholder": "Current password",
-        "newPasswordPlaceholder": "New password",
-        "confirmNewPasswordPlaceholder": "Confirm new password",
-        "update": "Update"
-      },
-      "deleteAccount": {
-        "title": "Delete account",
-        "warning": "This action is irreversible. If you proceed, your account and data will be permanently deleted.",
-        "passwordPlaceholder": "Enter password to confirm"
-      },
-      "reportBug": {
-        "title": "Report a bug",
-        "subjectPlaceholder": "Subject",
-        "descriptionPlaceholder": "Describe the issue…"
-      },
-      "contactUs": {
-        "title": "Contact us",
-        "subjectPlaceholder": "Subject",
-        "messagePlaceholder": "How can we help?"
-      }
-    },
     "toasts": {
       "unauthorized": "Unauthorized",
       "unauthorizedLoginAgain": "Unauthorized. Please log in again.",
@@ -114,15 +85,7 @@
       "notificationsUpdated": "Notification preferences updated.",
       "couldNotSaveNotifications": "Could not save notification preferences.",
       "settingsUpdated": "Settings updated.",
-      "couldNotSaveSettings": "Could not save settings.",
-      "enterNewEmail": "Please enter the new email.",
-      "enterCurrentPassword": "Please enter your current password.",
-      "emailUpdated": "Email updated successfully.",
-      "couldNotChangeEmail": "Could not change email. Check your password and try again.",
-      "enterNewPassword": "Please enter a new password.",
-      "passwordsDoNotMatch": "New passwords do not match.",
-      "passwordUpdated": "Password updated successfully.",
-      "couldNotChangePassword": "Could not change password. Check your current password and try again."
+      "couldNotSaveSettings": "Could not save settings."
     }
   }
 }
