Fix to email title display and translations

--- a/backend/i18n/locales/en/email/accounts.activation.json
+++ b/backend/i18n/locales/en/email/accounts.activation.json
@@ -1,5 +1,5 @@
 {
-  "subject": "Confirm your Flovers account",
+  "subject": "Confirm your account",
   "title": "Confirm your account",
   "intro": "Thanks for signing up to Flovers!",
   "cta": "Confirm account",
