--- a/backend/i18n/locales/en/email/accounts.password_reset.json
+++ b/backend/i18n/locales/en/email/accounts.password_reset.json
@@ -1,5 +1,5 @@
 {
-  "subject": "Reset your Flovers password",
+  "subject": "Reset your password",
   "title": "Reset your password",
   "intro": "We received a request to reset your password.",
   "cta": "Reset password",
