--- a/backend/i18n/locales/en/email/profiles.support_bug_admin.json
+++ b/backend/i18n/locales/en/email/profiles.support_bug_admin.json
@@ -1,5 +1,5 @@
 {
-  "subject": "New bug report (Flovers)",
+  "subject": "New bug report",
   "labels": {
     "from": "From:",
     "subject": "Subject:",
