--- a/backend/i18n/locales/en/email/profiles.support_contact_admin.json
+++ b/backend/i18n/locales/en/email/profiles.support_contact_admin.json
@@ -1,5 +1,5 @@
 {
-  "subject": "New contact message (Flovers)",
+  "subject": "New contact message",
   "labels": {
     "from": "From:",
     "subject": "Subject:"
