--- a/backend/i18n/locales/pl/email/accounts.activation.json
+++ b/backend/i18n/locales/pl/email/accounts.activation.json
@@ -1,5 +1,5 @@
 {
-  "subject": "Potwierdź konto Flovers",
+  "subject": "Potwierdź konto",
   "title": "Potwierdź swoje konto",
   "intro": "Dziękujemy za rejestrację w Flovers!",
   "cta": "Potwierdź konto",
