--- a/backend/i18n/locales/pl/email/accounts.password_reset.json
+++ b/backend/i18n/locales/pl/email/accounts.password_reset.json
@@ -1,5 +1,5 @@
 {
-  "subject": "Zresetuj hasło Flovers",
+  "subject": "Zresetuj hasło",
   "title": "Zresetuj hasło",
   "intro": "Otrzymaliśmy prośbę o zresetowanie hasła.",
   "cta": "Zresetuj hasło",
