--- a/backend/i18n/locales/pl/email/profiles.support_bug_admin.json
+++ b/backend/i18n/locales/pl/email/profiles.support_bug_admin.json
@@ -1,5 +1,5 @@
 {
-  "subject": "Nowe zgłoszenie błędu (Flovers)",
+  "subject": "Nowe zgłoszenie błędu",
   "labels": {
     "from": "Od:",
     "subject": "Temat:",
