--- a/backend/i18n/locales/pl/email/profiles.support_copy.json
+++ b/backend/i18n/locales/pl/email/profiles.support_copy.json
@@ -1,5 +1,5 @@
 {
-  "subject": "Otrzymaliśmy Twoją wiadomość (Flovers)",
+  "subject": "Otrzymaliśmy Twoją wiadomość",
   "intro_contact": "Dziękujemy za kontakt. Otrzymaliśmy Twoją wiadomość i wkrótce się z Tobą skontaktujemy.",
   "intro_bug": "Dziękujemy za zgłoszenie błędu. Otrzymaliśmy Twoje zgłoszenie i przeanalizujemy je.",
   "footer_note": "To jest automatyczne potwierdzenie. Prosimy nie odpowiadać na tę wiadomość.",
