--- a/backend/i18n/locales/en/email/profiles.support_copy.json
+++ b/backend/i18n/locales/en/email/profiles.support_copy.json
@@ -1,5 +1,5 @@
 {
-  "subject": "We received your message (Flovers)",
+  "subject": "We received your message",
   "intro_contact": "Thanks for contacting us. We received your message and will get back to you.",
   "intro_bug": "Thanks for reporting a bug. We received your report and will review it.",
   "footer_note": "This is an automatic confirmation. Please do not reply to this email.",
