--- a/backend/i18n/locales/pl/email/profiles.support_contact_admin.json
+++ b/backend/i18n/locales/pl/email/profiles.support_contact_admin.json
@@ -1,5 +1,5 @@
 {
-  "subject": "Nowa wiadomość kontaktowa (Flovers)",
+  "subject": "Nowa wiadomość kontaktowa",
   "labels": {
     "from": "Od:",
     "subject": "Temat:"
