Added an option to select one of 5 backgrounds

--- a/mobile/src/i18n/locales/en/profile.json
+++ b/mobile/src/i18n/locales/en/profile.json
@@ -62,7 +62,8 @@
         "bg1": "Background 1",
         "bg2": "Background 2",
         "bg3": "Background 3",
-        "bg4": "Background 4"
+        "bg4": "Background 4",
+        "bg5": "Background 5"
       },
       "tileMotiveOptions": {
         "light": "Light",
