--- a/mobile/src/i18n/locales/pl/profile.json
+++ b/mobile/src/i18n/locales/pl/profile.json
@@ -62,7 +62,8 @@
         "bg1": "Tło 1",
         "bg2": "Tło 2",
         "bg3": "Tło 3",
-        "bg4": "Tło 4"
+        "bg4": "Tło 4",
+        "bg5": "Tło 5"
       },
       "tileMotiveOptions": {
         "light": "Jasny",
